# django-seo-optimizer

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: branch-rules.yml
seo_optimizer/: __init__.py  analytics.py  apps.py  async_utils.py  base.py  exceptions.py  fields.py  i18n.py  mobile.py  models.py  redirects.py  signals.py  sitemaps.py  utils.py  version.py
seo_optimizer/locale/en/LC_MESSAGES/: django.po
seo_optimizer/templates/seo_optimizer/: hreflang.html  mobile_meta.html
seo_optimizer/templatetags/: i18n_seo_tags.py  mobile_seo_tags.py  seo_tags.py
tests/: conftest.py  settings.py  test_base.py  test_i18n.py  test_mobile.py  test_redirects.py
tests/performance/: locustfile.py
