[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-seo-optimizer"
version = "1.0.1"
authors = [
  { name="avixiii", email="contact@avixiii.com" },
]
description = "A powerful Django SEO optimization package with modern features"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking",
]
dependencies = [
    "django>=3.2",
    "python-slugify>=8.0.1",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/avixiii-dev/django-seo-optimizer"
"Documentation" = "https://avixiii.com/django-seo-optimizer"
"Bug Tracker" = "https://github.com/avixiii-dev/django-seo-optimizer/issues"

[tool.hatch.build.targets.wheel]
packages = ["seo_optimizer"]
